<resources>
    <string name="app_name">WAPS</string>
    <string name="navigation_drawer_open">Open navigation draw</string>
    <string name="navigation_drawer_close">Close Navigation Draw</string>
    <string name="wifi_ap_list">WAPS List</string>
    <string name="indoor">Indoor Location</string>
    <string name="settings">Settings</string>
    <string name="scan_wifi">Scan WAPS</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="clearList">Empty List</string>
    <string name="todo">TODO</string>
    <string name="logo">Logo</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="welcome">Welcome at WASP</string>
    <string name="pleaseS">Please sign up!</string>
    <string name="logout">Logout</string>

    <string name="register">Register Here!</string>
    <string name="backSign">Sign In!</string>
    <string name="scanning">Scanning…</string>
    <string name="update_details">Change Password</string>
    <string name="changeEmail">Change Email</string>
    <string name="update">Update</string>
    <string name="location">Get Location</string>
    <string name="locationL">Location List</string>
    <string name="oldPassword">Old Password</string>
    <string name="setTime">Wifi/Location Time Interval</string>

    <string name="venue_outside">Outside mapped area</string>
    <string name="venue_inside">In venue</string>
    <string name="floor_plan_outside">No floor plan</string>
    <string name="floor_certainty_percentage">Certainty: %.1f %%</string>
    <string name="region_information">Region Information</string>
    <string name="floor_level">Floor Level</string>
    <string name="latLong">Latitude and Longitude</string>


    <string name="del">Delete Account</string>
</resources>
