<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    tools:showIN="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/scan_wifi"/>

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/wifi_ap_list"/>

        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/location"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>

        <item
            android:id="@+id/Logout"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/logout"/>
    </group>

</menu>