<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#050505"
    tools:context=".SignInFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:tint="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_wifi_black_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:id="@+id/welcomeMsg"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/welcome"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleaseS"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextContainer"
        android:layout_below="@+id/welcomeMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/email"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/ic_action_username"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#F6F7F8"
            android:textColorHint="@color/colorAccent"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/password"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/ic_action_lock"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FBFBFC"
            android:textColorHint="@color/colorAccent"
            tools:targetApi="o" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnCard"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/signUp"
                android:textColor="#0A0A0A"
                android:textSize="20sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="82dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backSign"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</RelativeLayout>