<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/scanWasp"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnContainer"
        android:id="@+id/frameLayout">


        <RelativeLayout
            android:id="@+id/progressBarContainer"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:alpha="0.85"
            android:background="@drawable/progress_bar_con"
            android:padding="3dp"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:text="@string/scanning"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wifiList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp" />



    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/btnContainer"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/scanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#030303"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/scan"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/clearList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#030303"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/clearList"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/stopScnBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#030303"
            android:text="@string/stop"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</RelativeLayout>